--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/pg": "^8.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pg": "^8.11.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
