--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node src/index.ts | pino-pretty",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js | pino-pretty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,7 +21,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.2",
+    "pino": "^8.15.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.8",
+    "pino-pretty": "^10.2.0"
   }
 }
