--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node src/index.ts | pino-pretty",
     "build": "tsc",
     "start": "node dist/index.js | pino-pretty",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'dist/test/**/*.js' | pino-pretty"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +26,13 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.8",
-    "pino-pretty": "^10.2.0"
+    "@types/supertest": "^2.0.12",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "pino-pretty": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
