--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/hapi__joi": "^17.1.9",
     "@types/pg": "^8.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
