--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node src/index.ts | pino-pretty",
     "build": "tsc",
     "start": "node dist/index.js | pino-pretty",
-    "test": "mocha 'dist/test/**/*.js' | pino-pretty"
+    "test": "mocha --require ts-node/register 'test/**/*.ts' | pino-pretty"
   },
   "keywords": [],
   "author": "",
