--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.18.2",
     "pg": "^8.11.2",
     "pino": "^8.15.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
@@ -32,6 +34,8 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.8",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "pino-pretty": "^10.2.0",
