--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts | pino-pretty",
     "build": "tsc",
-    "start": "node dist/index.js | pino-pretty",
+    "start": "node dist/src/index.js | pino-pretty",
     "test": "mocha --env NODE_ENV=test --require ts-node/register 'test/**/*.ts' | pino-pretty"
   },
   "keywords": [],
